--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -18,7 +18,7 @@
  */
 description = '''\
 Run as:
-gradle clean tomcatrunwar
+gradle clean bootRun
 '''
 buildscript {
   repositories {
@@ -332,13 +332,12 @@ tomcatRunWar {
 sourceSets.main.output.resourcesDir = sourceSets.main.java.outputDir
 sourceSets.test.output.resourcesDir = sourceSets.test.java.outputDir
 
-/* Exclude maria db and embedded tomcat related files for non dev builds */
+/* FINERACT-730: Exclude MariaDB4j for non dev builds */
 if (!(project.hasProperty('env') && project.getProperty('env') == 'dev')) {
 sourceSets {
     main {
         java {
-            exclude '**/Server*'
-            exclude '**/MariaDB4j*'
+            exclude '**/*MariaDB4j*'
             exclude '**/EmbeddedTomcatWithSSLConfiguration.java'
         }
     }
@@ -544,8 +543,8 @@ def qualifyVersionIfNecessary(version) {
 }
 
 springBoot {
-    mainClassName = 'org.apache.fineract.ServerWithMariaDB4jApplication'
+    mainClassName = 'org.apache.fineract.ServerApplication'
 }
 bootWar {
-    mainClassName = 'org.apache.fineract.ServerWithMariaDB4jApplication'
+    mainClassName = 'org.apache.fineract.ServerApplication'
 }
