--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -49,8 +49,8 @@ apply plugin: 'tomcat'
 apply plugin: 'project-report'
 apply plugin: 'java'
 apply plugin: 'openjpa'
-apply plugin: 'pmd'
-apply plugin: 'findbugs'
+// apply plugin: 'pmd'
+// apply plugin: 'findbugs'
 
 /* define the valid syntax level for source files */
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -269,6 +269,7 @@ task dist(type:Zip){
 compileJava{
     dependsOn rat
 }
+/*
 pmd {
     sourceSets = [sourceSets.main]
     ignoreFailures = true
@@ -277,6 +278,7 @@ findbugs {
     ignoreFailures = true
     sourceSets = [sourceSets.main]
 }
+*/
 
 war {
 	from('../licenses/binary/') { // notice the parens
