mv *SpringBootWithMariaDB4j* (un-used) from src/test to src/integrationTest

--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -322,9 +322,14 @@ sourceSets {
         }
     }
     test {
-    	java {
-    		exclude '**/core/boot/tests/**'
-    	}
+        java {
+            exclude '**/core/boot/tests/**'
+        }
+    }
+    integrationTest {
+        java {
+            exclude '**/*MariaDB4j*'
+        }
     }
 }
 }
