web.xml metadata-complete=true and <absolute-ordering/>
This prevents Tomcat's JAR scanning, which is problematic when
using an old Tomcat (like we currently are) with newer JARs.

It probably also makes start-up a bit faster.

--- a/fineract-provider/src/main/webapp/WEB-INF/web.xml
+++ b/fineract-provider/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,10 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	id="fineract-platform-provider" version="3.0">
+	id="fineract-platform-provider" version="3.0"
+	metadata-complete="true">
+
+        <absolute-ordering/>
 
 	<display-name>Fineract Platform</display-name>
 	<description>A provider of microfinance services which applications can
@@ -36,7 +39,4 @@
             and org.apache.fineract.infrastructure.core.boot.WebXmlConfiguration take its place now.
           =========================================================================
       -->
-
-
-
 </web-app>
