--- a/fineract-provider/dependencies.gradle
+++ b/fineract-provider/dependencies.gradle
@@ -17,9 +17,8 @@
  * under the License.
  */
 dependencies {
-        def tomcatVersion = '7.0.54'
-        tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
-               "org.apache.tomcat.embed:tomcat-embed-logging-log4j:${tomcatVersion}" // NOT tomcat-embed-logging-juli (http://stackoverflow.com/questions/23963049/classcircularityerror-java-util-logging-logrecord-running-gradle-webapp-with-ja)
+        def tomcatVersion = '8.5.42'
+        tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}"
         tomcat("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}") {
             exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
         }
