--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -47,7 +47,7 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'com.bmuschko.tomcat'
 apply plugin: 'project-report'
-apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'openjpa'
 // apply plugin: 'pmd'
 // apply plugin: 'findbugs'
