--- a/fineract-provider/dependencies.gradle
+++ b/fineract-provider/dependencies.gradle
@@ -27,36 +27,42 @@ dependencies {
 
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
 
-    compile(
+    api(
+                [group: 'com.google.code.gson', name: 'gson', version: '2.2.4'],
+                [group: 'org.quartz-scheduler', name: 'quartz', version: '2.1.7'],
+                [group: 'joda-time', name: 'joda-time', version: '2.4'],
+				[group: 'org.apache.openjpa', name:'openjpa-all', version:'2.4.1'],
+                [group: 'org.springframework', name:'spring-jms', version: '4.0.7.RELEASE'],
+                [group: 'org.mnode.ical4j', name: 'ical4j', version: '1.0.4'],
+                [group: 'com.google.guava', name: 'guava', version: '15.0'],
+                [group: 'org.springframework', name: 'spring-context-support', version: springVersion],
+                [group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: springOauthVersion],
+                [group: 'com.squareup.retrofit', name: 'retrofit', version: '1.6.1'],
+                [group: 'com.sun.jersey', name: 'jersey-core', version: jerseyVersion]
+    )
+
+    implementation(
                // [group: 'ch.vorburger.mariaDB4j', name: 'mariaDB4j', version: '2.1.3'],
 
                 [group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion],
                 [group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: springBootVersion],
                 [group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: springBootVersion],
 				//[group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.0'],
-                [group: 'org.springframework', name: 'spring-context-support', version: springVersion],
 
-	       		[group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: springOauthVersion],
 
-                [group: 'org.apache.openjpa', name:'openjpa-all', version:'2.4.1'],
                 //[group: 'org.apache.openjpa', name:'openjpa-maven-plugin', version:'2.4.1'],
                 //[group: 'javax.ws.rs', name: 'jsr311-api', version: '1.1.1'],
-                [group: 'com.sun.jersey', name: 'jersey-core', version: jerseyVersion],
                 [group: 'com.sun.jersey', name: 'jersey-servlet', version: jerseyVersion],
                 [group: 'com.sun.jersey', name: 'jersey-server', version: jerseyVersion],
                 [group: 'com.sun.jersey', name: 'jersey-json', version: jerseyVersion],
                 [group: 'com.sun.jersey.contribs', name: 'jersey-spring', version: jerseyVersion],
                 [group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: jerseyVersion],
 
-                [group: 'com.squareup.retrofit', name: 'retrofit', version: '1.6.1'],
                 [group: 'com.squareup.okhttp', name: 'okhttp', version: '2.0.0'],
                 [group: 'com.squareup.okhttp', name: 'okhttp-urlconnection', version: '2.0.0'],
 
 
-                [group: 'com.google.code.gson', name: 'gson', version: '2.2.4'],
-                [group: 'com.google.guava', name: 'guava', version: '15.0'],
 
-                [group: 'joda-time', name: 'joda-time', version: '2.4'],
                 //[group: 'net.sourceforge.javacsv', name: 'javacsv', version: '2.0'],
                 [group: 'org.apache.commons', name: 'commons-email', version: '1.3.3'],
                 [group: 'org.apache.commons', name: 'commons-lang3', version: '3.3.2'],
@@ -74,9 +80,7 @@ dependencies {
 
                 [group: 'com.lowagie', name: 'itext', version: '2.1.7'],
                 //[group: 'com.lowagie', name: 'itext-rtf', version: '2.1.7'],
-                [group: 'org.mnode.ical4j', name: 'ical4j', version: '1.0.4'],
                 [group: 'com.googlecode.flyway', name: 'flyway-core', version: '2.1.1'],
-                [group: 'org.quartz-scheduler', name: 'quartz', version: '2.1.7'],
                 [group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.80'],
                 [group: 'net.sf.ehcache', name: 'ehcache', version: '2.7.2'],
                 [group: 'com.github.spullara.mustache.java', name: 'compiler', version: '0.8.12'],
@@ -89,7 +93,6 @@ dependencies {
                 //[group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.0']
 
                 [group: 'io.swagger', name: 'swagger-jersey-jaxrs', version: '1.5.15'],
-                [group: 'org.springframework', name:'spring-jms', version: '4.0.7.RELEASE'],
                 [group: 'org.apache.activemq', name: 'activemq-broker', version: '5.9.1'],
                 [group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'],
 
