completely remove bmuschko:gradle-tomcat-plugin, and slf4j-simple

--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -35,10 +35,9 @@ buildscript {
 
     dependencies {
         classpath 'io.spring.gradle:dependency-management-plugin:1.0.9.RELEASE'
-        classpath 'com.bmuschko:gradle-tomcat-plugin:2.5',
-            'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0',
-            'org.zeroturnaround:gradle-jrebel-plugin:1.1.2',
-            'org.springframework.boot:spring-boot-gradle-plugin:2.2.4.RELEASE'
+        classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
+        classpath 'org.zeroturnaround:gradle-jrebel-plugin:1.1.2'
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.2.4.RELEASE'
         // below
         classpath 'org.apache.openjpa:openjpa:3.1.1' // when upgrading, also change OpenJPA version repeated below in dependencyManagement!
         classpath 'com.radcortez.gradle:openjpa-gradle-plugin:3.1.0'
@@ -60,7 +59,6 @@ apply plugin: 'war'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'com.bmuschko.tomcat'
 apply plugin: 'project-report'
 apply plugin: 'java-library'
 apply plugin: 'openjpa'
@@ -110,7 +108,6 @@ dependencyManagement {
         dependency 'junit:junit:+'
         //dependency 'junit:junit-dep:4.11'
         dependency 'org.mockito:mockito-core:+'
-        dependency 'org.slf4j:slf4j-simple:1.7.30'
         dependency 'com.mockrunner:mockrunner-jms:2.0.1'
         dependency 'com.mockrunner:mockrunner-jdbc:2.0.1'
 
@@ -417,45 +414,11 @@ task licenseFormatBuildScripts (type:nl.javadude.gradle.plugins.license.License)
 }
 licenseFormat.dependsOn licenseFormatBuildScripts
 
-tomcatRun {
-    httpPort = 8080
-    httpsPort = 8443
-    stopPort = 8081
-    stopKey=   'stopKey'
-    enableSSL = true
-}
-
-tomcatRunWar {
-    httpPort = 8080
-    httpsPort = 8443
-    stopPort = 8081
-    stopKey=   'stopKey'
-    enableSSL = true
-    keystoreFile = file('src/main/resources/keystore.jks')
-    keystorePass = 'openmf'
-}
-
-task tomcatRunWarAsDaemonForIntegrationTest(type: com.bmuschko.gradle.tomcat.tasks.TomcatRunWar) {
-    httpPort = 8080
-    httpsPort = 8443
-    stopPort = 8081
-    stopKey=   'stopKey'
-    enableSSL = true
-    keystoreFile = file('src/main/resources/keystore.jks')
-    keystorePass = 'openmf'
-    daemon = true
-}
-
-task tomcatStopAfterIntegrationTest(type: com.bmuschko.gradle.tomcat.tasks.TomcatStop) {
-    stopPort = 8081
-    stopKey = 'stopKey'
-}
-
 /* http://stackoverflow.com/questions/19653311/jpa-repository-works-in-idea-and-production-but-not-in-gradle */
 sourceSets.main.output.resourcesDir = sourceSets.main.java.outputDir
 sourceSets.test.output.resourcesDir = sourceSets.test.java.outputDir
 
-/* Exclude maria db and embedded tomcat related files for non dev builds */
+/* Exclude MariaDB4j related files for non dev builds */
 if (!(project.hasProperty('env') && project.getProperty('env') == 'dev')) {
     sourceSets {
         main {
@@ -484,11 +447,7 @@ configurations {
 }
 
 task integrationTest(type:Test) {
-    description = "Run integration tests (located in src/integrationTest/java). Starts Tomcat in daemon mode before executing the tests (and stops it after)."
-    dependsOn war
-    dependsOn tomcatRunWarAsDaemonForIntegrationTest
-    tasks.findByName('tomcatRunWarAsDaemonForIntegrationTest').mustRunAfter 'war'
-    finalizedBy tomcatStopAfterIntegrationTest
+    description = "Run integration tests (located in src/integrationTest/java)."
 
     testClassesDirs = project.sourceSets.integrationTest.output.classesDirs
     classpath = project.sourceSets.integrationTest.runtimeClasspath
