--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -104,8 +104,11 @@ dependencyManagement {
         dependency 'org.apache.activemq:activemq-broker:+'
         dependency 'javax.validation:validation-api:+'
         dependency 'org.apache.bval:org.apache.bval.bundle:2.0.2'
-        dependencySet(group: 'io.rest-assured', version: '3.3.0'){
+        dependencySet(group: 'io.rest-assured', version: '4.3.0') {
             entry 'rest-assured'
+            entry 'rest-assured-common'
+            entry 'json-path'
+            entry 'xml-path'
         }
         dependency 'junit:junit:+'
         //dependency 'junit:junit-dep:4.11'
