client: WIP (NOK) to skip generating invoker (FINERACT-1231)

--- a/build.gradle
+++ b/build.gradle
@@ -334,6 +334,7 @@ allprojects  {
             // Git build info
             "**/git.properties",
             ".mailmap",
+            ".openapi-generator-ignore",
         ]
     }
 }
